--- a/blog.html
+++ b/blog.html
@@ -44,22 +44,22 @@
                     <a href="index.html">Home</a>
                 </li>
 
-                <li class="nav-link-item">
+                <li class="nav-link-item display-none">
                     <a href="#about">About</a>
                 </li>
 
-                <li class="nav-link-item">
+                <li class="nav-link-item display-none">
                     <a href="#services">Services</a>
                 </li>
 
-                <li class="nav-link-item">
+                <li class="nav-link-item display-none">
                     <a href="#portfolio">Portfolio</a>
                 </li>
 
-                <li class="nav-link-item">
+                <li class="nav-link-item display-none">
                     <a href="#team">Team</a>
                 </li>
-                <li class="nav-link-item">
+                <li class="nav-link-item display-none">
                     <a href="#pricing">Pricing</a>
                 </li>
 
@@ -431,6 +431,74 @@
                 </ul>
             </div>
             
+        </section>
+
+        <!-- Contact Section -->
+
+        <section class="contact-section padding-top-bottom" id="contact">
+
+            <div class="contact-sec-content container">
+                <h3 class="heading">Contact</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nam, corrupti
+                    exercitationem voluptate beatae commodi corporis maximenisi amet placeat deleniti perspiciatis,
+                    facere voluptatibus voluptas ea, iste doloremque labore cumque.</p>
+            </div>
+
+            <div class="contact-sec-box container-1">
+
+                <div class="flex-100 flex justify-between items-center flex-wrap-3">
+
+                    <div class="contact-information flex-32 flex items-start md-flex-100-2">
+                        <div class="contact-icon small-padding">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </div>
+                        <div class="contact-info">
+                            <h6>Our Address</h6>
+                            <p>A108 Adam Street, New York, NY 535022</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-information flex-32 flex items-start md-flex-100-2">
+                        <div class="contact-icon">
+                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                        </div>
+                        <div class="contact-info">
+                            <h6>Email Us</h6>
+                            <p>info@example.com</p>
+                            <p>contact@example.com</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-information flex-32 flex items-start md-flex-100-2">
+                        <div class="contact-icon">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                        </div>
+                        <div class="contact-info">
+                            <h6>Call Us</h6>
+                            <p>+1 5589 55488 55</p>
+                            <p>+1 6678 254445 41</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="contact-form flex-100">
+
+                    <form action="index.html" method="post">
+                        <input type="text" name="user-name" placeholder="Your Name" class="width-48 margin-right"><!--
+                        --><input type="email" name="user-email" placeholder="Your Email" class="width-48 margin-left"><!--
+                        --><input type="text" name="subject" placeholder="Subject" class="width-100"><!--
+                        --><textarea name="message" rows="6" placeholder="Subject" class="width-100"></textarea><!--
+                        -->
+                        <div class="flex justify-center items-center">
+                            <button class="form-btn btn">Send Message</button>
+                        </div>
+                    </form>
+
+                </div>
+
+            </div>
+
         </section>
 
     </main>
